# Adaptive-Attention

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
notebooks/: A3_Adaptive_Attention.ipynb
paper/: a3_paper.tex
scripts/: run_smoke_test.py
src/: __init__.py  a3_attention.py
tests/: test_a3_attention.py
