[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a3-attention"
version = "1.0.0"
description = "Adaptive Activation Attention (A3): a learnable, input-conditioned replacement for softmax attention -- an empirical study with mixed findings."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Muhammad Maroof Farooq", email = "maroof96965@gmail.com" }
]
keywords = ["transformers", "attention", "softmax", "deep-learning", "pytorch", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/maroofiums/A3-Attention"
Paper = "https://github.com/maroofiums/A3-Attention/blob/main/paper/a3_paper.pdf"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
